--- a/digiamp-init.service
+++ b/digiamp-init.service
@@ -5,6 +5,7 @@ After=alsa-restore.service
 
 [Service]
 Type=oneshot
+# Set base DAC volume to maximum
 ExecStart=/usr/bin/amixer -c 0 cset numid=1 207,207
 RemainAfterExit=yes
 
