--- a/services/boot-display.service
+++ b/services/boot-display.service
@@ -1,17 +1,17 @@
 [Unit]
 Description=Boot Display Service
 DefaultDependencies=no
+After=systemd-udevd.service
+Before=basic.target
 Conflicts=shutdown.target
-After=local-fs.target dev-i2c-1.device
-Before=sysinit.target
-Requires=dev-i2c-1.device
 
 [Service]
 Type=simple
 User=%USER%
 WorkingDirectory=%HOME%/Radiowecker
+ExecStartPre=/bin/sleep 1
 ExecStart=/usr/bin/python3 %HOME%/Radiowecker/boot_display.py
 RemainAfterExit=no
 
 [Install]
-WantedBy=sysinit.target
+WantedBy=basic.target
