--- a/services/radiowecker.service
+++ b/services/radiowecker.service
@@ -7,6 +7,7 @@ Wants=network.target
 Type=simple
 User=%USER%
 WorkingDirectory=%HOME%/Radiowecker
+ExecStartPre=/bin/bash %HOME%/Radiowecker/mount_musik.sh
 ExecStart=/usr/bin/python3 %HOME%/Radiowecker/main.py
 Restart=always
 RestartSec=10
